--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+glibc (2.29-3) unstable; urgency=medium
+
+  [ Svante Signell ]
+  * patches/hurd-i386/git-rlock.diff: New patch to add support for record
+    locking.
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-locarchive.diff,tg-WRLCK-upgrade.diff: Remove, now
+    useless.
+  * control: Bump hurd-dev dependency to get record locking RPC.
+  * libc0.3.symbols.hurd-i386: Update accordingly.
+  * patches/arm/unsubmitted-ldso-abi-check.diff: Remove obsolete patch.
+    Closes: #943798.
+
+ -- Samuel Thibault <sthibault@debian.org>  Thu, 31 Oct 2019 23:31:12 +0100
+
 glibc (2.29-2) unstable; urgency=medium
 
   [ Aurelien Jarno ]
