--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,16 @@
+glibc (2.29-5) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 06 Dec 2019 21:33:17 +0100
+
 glibc (2.29-4) experimental; urgency=medium
 
   [ Aurelien Jarno ]
   * Upload to experimental.
   * debian/control.in/libc: make libc depends on libcrypt1, libc-dev depends
-    on libcrypt1-dev and libc-udeb depends on libcrypt1-udeb.
+    on libcrypt1-dev and libc-udeb depends on libcrypt1-udeb.  Closes:
+    #941853.
   * debian/rules, debian/rules.d/build.mk, debian/rules.d/debhelper.mk,
     debian/sysdeps/amd64.mk: disable libcrypt by passing --disable-crypt
     except for bi/triarch builds.
@@ -659,7 +666,7 @@ glibc (2.27-3) unstable; urgency=medium
 glibc (2.27-2) unstable; urgency=medium
 
   [ Samuel Thibault ]
-  * debian/patches/hurd-i386/git-UTIME.diff: New patch.
+  * debian/patches/hurd-i386/git-UTIME.diff: New patch.  Closes: #762677.
   * debian/control: Bump hurd build dep accordingly.
   * debian/libc0.3.symbols.hurd-i386: Update accordingly.
 
