--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+glibc (2.29-9) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/local-fix-nss.diff: Refresh.
+  * patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Fix setitimer.
+
+  [ Aurelien Jarno ]
+  * debian/sysdeps/{amd64,x32}.mk: do not optimize for pentium4.  Closes:
+    #948396.
+  * debian/patches/any/local-revert-24323.diff: revert upstream change
+    preventing dlopening PIE executable, The patch is correct, but breaks
+    the autopkgtest for wcc and prevents the migration of glibc to testing.
+    Revert it temporarily until wcc is fixed. See #948613.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Fri, 10 Jan 2020 23:21:25 +0100
+
 glibc (2.29-8) unstable; urgency=medium
 
   [ Samuel Thibault ]
