--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+glibc (2.30-2) unstable; urgency=medium
+
+  * debian/rules.d/debhelper.mk: depends on libgcc-sN instead of libgccN.
+    Closes: #953657.
+  * debian/rules.d/build.mk: do not install <finclude/math-vector-fortran.h>
+    for now as it is not multiarch safe.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 12 Mar 2020 23:47:03 +0100
+
 glibc (2.30-1) unstable; urgency=medium
 
   [ Samuel Thibault ]
