--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+glibc (2.30-4) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/debhelper.in/libc.preinst, debian/rules.d/debhelper.mk: there
+    is no easy way to check if a file belongs to a package with usrmerge.
+    Just drop all safety checks...  Closes: #954915.
+  * debian/patches/any/local-tst-system-disable-shell-tests.diff: disable
+    tests that rely on a particular shell until a fix is found upstream.
+
+  [ John Paul Adrian Glaubitz ]
+  * debian/testsuite-xfail-debian.mk: mark nptl/tst-cond8-static and
+    nptl/tst-mutex{,pi}8-static as XFAIL on sparc64.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 25 Mar 2020 13:56:56 +0100
+
 glibc (2.30-3) unstable; urgency=medium
 
   * debian/patches/git-updates.diff: update from upstream stable branch:
