--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+glibc (2.30-6) unstable; urgency=medium
+
+  * debian/sysdeps/s390x.mk: do not set libc_rtlddir, it is set to the
+    default.
+  * debian/rules.d/debhelper.mk: only create the dynamic linker in the udeb
+    if it doesn't already exist.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2020 12:32:42 +0200
+
 glibc (2.30-5) unstable; urgency=medium
 
   [ Samuel Thibault ]
