--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+glibc (2.30-8) unstable; urgency=medium
+
+  * sysdeps/hurd.mk: Move ld.so link creation to hurd-i386.mk since it is
+    32bit-specific.
+  * sysdeps/hurd-i386.mk: Move i386-specific mach headers to multiarch
+    directory, so they get accessible from the "machine" symlink of the
+    gnumach-dev package.
+  * patches/hurd-i386/git-ss_init.diff: Add missing ss initialization. Fixes
+    Xorg startup error, and possibly a lot other bugs with threads.
+
+ -- Samuel Thibault <sthibault@debian.org>  Mon, 11 May 2020 02:04:03 +0200
+
 glibc (2.30-7) unstable; urgency=medium
 
   * debian/debhelper.in/libc.postinst: re-add /etc/ld.so.nohwcapc code.
