--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,30 @@
+glibc (2.31-3) unstable; urgency=medium
+
+  [ Aurelien Jarno ]
+  * debian/control.in/libc: add a Breaks: against openarena (<< 0.8.8+dfsg-4~)
+    due to bug#966150.
+  * debian/control.in/libc: add a Breaks: against ioquake3
+    (<< 1.36+u20200211.f2c61c1~dfsg-2~) as previous versions are not correctly
+    linked with libm.
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Fix an infinite loop in the iconv program (CVE-2016-10228).  Closes:
+      #856503.
+    - debian/patches/any/submitted-selinux-deprecations.diff: upstreamed.
+    - debian/patches/x32/submitted-fix-nptl-setgroups-x32.diff: upstreamed.
+  * debian/rules.d/build.mk: install <finclude/math-vector-fortran.h> in the
+    multiarch path.  Closes: #962457.
+
+  [ Samuel Thibault ]
+  * debian/libc0.3.symbols.hurd-i386: Fix dependency of __errno_location and
+    __h_errno_location symbols in libpthread.
+  * patches/hurd-i386/unsubmitted-sbrk-_end.diff: Fix _end symbol appearance
+    by reworking sbrk.
+  * patches/hurd-i386/unsubmitted-sched_sets.diff: Add sched_set/getscheduler.
+  * patches/hurd-i386/git-pthread_atfork-hidden.diff: Hide pthread_atfork
+    symbols imported to applications, to avoid leaking them.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 04 Aug 2020 17:02:38 +0200
+
 glibc (2.31-2) unstable; urgency=medium
 
   [ Aurelien Jarno ]
