--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,29 @@
+glibc (2.31-0ubuntu9.1) focal; urgency=medium
+
+  [ Michael Hudson-Doyle ]
+  * Mark tst-getpw as XFAIL on arm64. (LP: #1869364)
+
+  [ Matthias Klose ]
+  * Copy the fully conditionalized x86 variant for math-vector-fortran.h
+    to /usr/include/finclude. On all architectures. (LP: #1879092)
+
+  [ Balint Reczey ]
+  * debian/gbp.conf: Add initial configuration
+  * debian/control.in/main: Add Vcs-* pointing to Ubuntu packaging repository
+  * debian/debhelper.in/libc.preinst: Fix setting LDCONFIG_NOTRIGGER
+    (LP: #1889190)
+  * Fall back to calling nanosleep syscall when __clock_nanosleep returns
+    EINVAL due to CLOCK_REALTIME not being supported (LP: #1871129)
+  * debian/testsuite-xfail-debian.mk: XFAIL tst-getpw on armhf, too
+    (LP: #1869364)
+  * XFAIL stdlib/tst-getrandom (LP: #1891403)
+
+  [ Dimitri John Ledkov ]
+  * debian/patches/powerpc: Cherrypick upstream patches to support POWER10
+    optimized library loading. LP: #1887989
+
+ -- Balint Reczey <rbalint@ubuntu.com>  Mon, 17 Aug 2020 22:02:52 +0200
+
 glibc (2.31-0ubuntu9) focal; urgency=medium
 
   * Ship arm64 variant with LSE support in libc6-lse
