--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+glibc (2.32-0ubuntu4) hirsute; urgency=medium
+
+  * tests: XFAIL time/tst-cpuclock1 on armel, too. (LP: #1895687)
+    The armhf build builds for armel, too, thus this fixes the armhf
+    autopkgtest.
+  * debian/control: Only recommend libnss-nis and libnss-nisplus.
+    They pull in a sizable amount of extra dependencies while they are rarely
+    needed.
+  * Make libc6 provide libc6-lse on arm64.
+    Libc6 is now compiled with -moutline-atomics thus the separate binary
+    package is dropped.
+  * Ship libc variant compiled for profiling in libc6-prof
+  * debian/patches/git-updates.diff: update from upstream stable branch
+  * Drop obsoleted local-cudacc-float128.diff which breaks new icc
+    (LP: #1895358)
+  * XFAIL tst-sysvshm-linux on i386 and x32
+  * Merge 2.31-4 from Debian unstable
+
+ -- Balint Reczey <rbalint@ubuntu.com>  Thu, 29 Oct 2020 22:11:57 +0100
+
 glibc (2.32-0ubuntu3) groovy; urgency=medium
 
   * Fix cross-toolchain-base.
@@ -27,9 +47,52 @@ glibc (2.32-0ubuntu2) groovy; urgency=medium
     in 2.32
   * debian/patches/git-updates.diff: update from upstream stable branch:
     - x86-64: Fix FMA4 detection in ifunc
-  * debian/testsuite-xfail-debian.mk: XFAIL unsupported tests failing in autopkgtest
+  * debian/testsuite-xfail-debian.mk: XFAIL unsupported tests failing in
+    autopkgtest
 
  -- Balint Reczey <rbalint@ubuntu.com>  Sun, 06 Sep 2020 22:08:44 +0200
+
+glibc (2.31-4) unstable; urgency=medium
+
+  [ Samuel Thibault ]
+  * debian/patches/hurd-i386/{unsubmitted-sbrk-_end.diff,tg-pie-sbrk.diff}:
+    Merge into...
+  * debian/patches/hurd-i386/git-sbrk-end.diff: ... committed patch.
+  * debian/patches/hurd-i386/unsubmitted-sched_sets.diff: Rename to...
+  * debian/patches/hurd-i386/git-sched_sets.diff: ... committed patch.
+  * debian/patches/hurd-i386/local-posix_cputime.diff: New patch to avoid
+    applications trying to use extended clock ids.
+  * debian/patches/hurd-i386/git-bsd4.3-ioctls.diff: New patch to avoid
+    defining elder macros.
+
+  [ Aurelien Jarno ]
+  * debian/patches/git-updates.diff: update from upstream stable branch:
+    - Handle translation output codesets with suffixes.  Closes: #968260.
+  * debian/control.in/libc: add a Breaks: against libgegl-0.4-0 (<< 0.4.18).
+    Closes: #968342.
+  * debian/control.in/libc: add a Breaks: against busybox (<< 1.30.1-6) due to
+    bug #966074.
+  * debian/debhelper.in/libc-dev{,-alt}.lintian-overrides: remove files as
+    lintian is now smarter.
+  * debian/po/it.po: Update Italian debconf translation, by Luca Monducci.
+    Closes: #969219.
+  * debian/po/pt_BR.po: Update Brazilian Portuguese debconf translation, by
+    Adriano Rafael Gomes. Closes: #970199.
+  * debian/po/de.po: recode to UTF-8.
+  * debian/rules.d/build.mk: stop passing --enable-obsolete-nsl.
+  * debian/debhelper.in/libc-dev{,-alt}.install: do not install libnsl.a.
+  * debian/debhelper.in/libc-dev.install.hurd-i386: ditto.
+  * debian/libc0.1.symbols.common, debian/libc0.3.symbols.hurd-i386,
+    debian/libc6.1.symbols.alpha, debian/libc6.symbols{common,hppa,sparc}:
+    remove libnss_nis.so.2 and libnss_nisplus.so.2 symbols.
+  * debian/rules.d/build.mk: do not ship <rpcsvc/yppasswd.h> and
+    <rpcsvc/yppasswd.x> as they are shipped by libnsl-dev.
+  * debian/control.in/libc, debian/rules.d/debhelper.mk: make libc6 to depend on
+    libnss-nis and libnss-nisplus, except for stage1 and stage2.
+  * debian/control.in/libc, debian/rules.d/debhelper.mk: make libc6-dev to
+    depend on libnsl-dev, except for stage1 and stage2.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 10 Oct 2020 21:54:24 +0200
 
 glibc (2.31-3) unstable; urgency=medium
 
